sbi-manifests/sbi-cms-platform-audit-service/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-platform-audit-service
  namespace: sbi
  labels:
    app: sbi-cms-platform-audit-service
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-platform-audit-service
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-platform-audit-service
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 589cc2563d75c6b828a036d517f2760e45fb76599855d51b326d8ff3f026ae32
    spec:
      serviceAccountName: sbi-cms-platform-audit-service-sa
      volumes:
        - name: key-cert-vol
          configMap:
            name: public-private-key
        - name: visa-npci-key-configmap-volume
          configMap:
            name: visa-npci-key-configmap
        - name: dcms-keys-volume
          configMap:
            name: dcms-keys-configmap
        - name: sbi-keys-volume
          configMap:
            name: sbi-keys-configmap
      containers:
        - name: sbi-cms-platform-audit-service
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-platform-audit-service:sbi-uat.v6
          volumeMounts:
            - name: key-cert-vol
              mountPath: /config
            - name: visa-npci-key-configmap-volume
              mountPath: /data
            - name: dcms-keys-volume
              mountPath: /vol
            - name: sbi-keys-volume
              mountPath: /sbi
          ports:
            - containerPort: 8097
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
