sbi-manifests/sbi-cms-platform-audit-service/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-platform-audit-service
  namespace: sbi
  labels:
    app: sbi-cms-platform-audit-service
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8097-8097'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8097
      targetPort: 8097
      name: 8097-8097
  selector:
    app: sbi-cms-platform-audit-service
  type: ClusterIP
